selfhost/tests/neg/mapofmap.ail
// EXPECT: unsupported map value type
// A map value that is itself a map has no runtime — must be rejected.
m := {"a": {"x": 1}}
println(len(m))
